added markup for the characteristic section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               Вся информация на ЖК-дисплее
             </h4>
             <p class="info__item-text">
-              Вся информация на ЖК-дисплее 
+              Вся информация на ЖК-дисплее
               Большой информативный дисплей, вынесенный на рулевую стойку, отображает всю важную информацию о работе
               HIMO C26 в
               реальном времени. Вы сможете узнать актуальную скорость передвижения, уровень заряда или пройденный путь.
@@ -189,6 +189,192 @@
               структура седла обеспечивает оптимальную упругость и высокий комфорт во время езды.
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="characteristic">
+    <div class="container">
+      <h4 class="characteristic__title">
+        Хaрактеристики
+      </h4>
+      <div class="characteristic__inner">
+        <div class="characteristic__items">
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              Общие
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Производитель
+              </p>
+              <p class="characteristic__descr">
+                Xiaomi
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Вид
+              </p>
+              <p class="characteristic__descr">
+                взрослый, дорожный, городской, электровелосипед, алюминиевая рама
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Колеса
+              </p>
+              <p class="characteristic__descr">
+                26, двойной алюминиевый обод
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Электропривод
+              </p>
+              <p class="characteristic__descr">
+                мотор 250W, разгон до 25 км/ч
+              </p>
+            </li>
+          </ul>
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              амортизация
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Тип амортизации
+              </p>
+              <p class="characteristic__descr">
+                амортизирующая вилка (Hard tail)
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Вилка
+              </p>
+              <p class="characteristic__descr">
+                пружинно-эластомерная
+              </p>
+            </li>
+          </ul>
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              управление
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Руль
+              </p>
+              <p class="characteristic__descr">
+                изогнутый, регулируемый подъем
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Манетки
+              </p>
+              <p class="characteristic__descr">
+                триггерные однорычажные, Shimano
+              </p>
+            </li>
+          </ul>
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              характеристика трансмиссии
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Количество скоростей
+              </p>
+              <p class="characteristic__descr">
+                7
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Педали
+              </p>
+              <p class="characteristic__descr">
+                классические
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Передний переключатель
+              </p>
+              <p class="characteristic__descr">
+                1 звезда
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Задний переключатель
+              </p>
+              <p class="characteristic__descr">
+                Shimano Tourney (прогулочный)
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Кассета
+              </p>
+              <p class="characteristic__descr">
+                7 звезд
+              </p>
+            </li>
+          </ul>
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              тормоза
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Передний
+              </p>
+              <p class="characteristic__descr">
+                дисковый механический
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Задний
+              </p>
+              <p class="characteristic__descr">
+                дисковый механический
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Готовность к установке дисковых
+              </p>
+              <p class="characteristic__descr">
+                рама, вилка, втулка
+              </p>
+            </li>
+          </ul>
+          <ul class="characteristic__list">
+            <li class="characteristic__title">
+              прочее
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Оснащение
+              </p>
+              <p class="characteristic__descr">
+                электрооборудование, звонок
+              </p>
+            </li>
+            <li class="characteristic__line">
+              <p class="characteristic__name">
+                Вес
+              </p>
+              <p class="characteristic__descr">
+                25 кг
+              </p>
+            </li>
+          </ul>
+          <img class="characteristic__img" src="images/characteristic-img.jpg" alt="">
         </div>
       </div>
     </div>
