added styles for the characteristic section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </section>
   <section class="characteristic">
     <div class="container">
-      <h4 class="characteristic__title">
+      <h4 class="characteristic__head">
         Хaрактеристики
       </h4>
       <div class="characteristic__inner">
@@ -374,8 +374,8 @@
               </p>
             </li>
           </ul>
-          <img class="characteristic__img" src="images/characteristic-img.jpg" alt="">
         </div>
+        <img class="characteristic__img" src="images/characteristic-img.jpg" alt="">
       </div>
     </div>
   </section>
