--- a/index.html
+++ b/index.html
@@ -379,6 +379,21 @@
       </div>
     </div>
   </section>
+  <div class="slider">
+    <div class="container">
+      <div class="slider__items">
+        <div class="slider__item">
+          <img class="slider__img" src="images/slider/slider-1.jpg" alt="">
+        </div>
+        <div class="slider__item">
+          <img class="slider__img" src="images/slider/slider-2.jpg" alt="">
+        </div>
+        <div class="slider__item">
+          <img class="slider__img" src="images/slider/slider-3.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
