--- a/index.html
+++ b/index.html
@@ -394,6 +394,60 @@
       </div>
     </div>
   </div>
+  <section class="price">
+    <div class="container">
+      <div class="price__inner">
+        <form class="form">
+          <h4 class="form__title">
+            Заказать
+          </h4>
+          <p class="form__text">
+            Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в ближайшее время
+          </p>
+          <input class="form__input-name" type="text" placeholder="имя">
+          <input class="form__input-phone" type="tel" placeholder="телефон">
+          <p class="form__text">
+            выберите желаемый цвет
+          </p>
+          <div class="form__label-box">
+            <label class="form__label">
+              <input type="radio" class="form__input-radio">
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/form-bike/bike-grey.jpg" alt="">
+                <p class="form__bike-price">
+                  33 999 грн.
+                </p>
+              </div>
+              <div class="form__radio-style form__radio-style--grey"></div>
+            </label>
+            <label class="form__label">
+              <input type="radio" class="form__input-radio">
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/form-bike/bike-white.jpg" alt="">
+                <p class="form__bike-price">
+                  32 999 грн.
+                </p>
+              </div>
+              <div class="form__radio-style form__radio-style--white"></div>
+            </label>
+            <label class="form__label">
+              <input type="radio" class="form__input-radio">
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/form-bike/bike-red.jpg" alt="">
+                <p class="form__bike-price">
+                  35 999 грн.
+                </p>
+              </div>
+              <div class="form__radio-style form__radio-style--red"></div>
+            </label>
+          <a class="form__link">
+            ЗАКАЗАТЬ
+          </a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
