--- a/index.html
+++ b/index.html
@@ -406,44 +406,44 @@
           </p>
           <input class="form__input-name" type="text" placeholder="имя">
           <input class="form__input-phone" type="tel" placeholder="телефон">
-          <p class="form__text">
+          <p class="form__input-text">
             выберите желаемый цвет
           </p>
           <div class="form__label-box">
             <label class="form__label">
-              <input type="radio" class="form__input-radio">
+              <input type="radio" class="form__input-radio" name="radio">
               <div class="form__bike">
                 <img class="form__bike-img" src="images/form-bike/bike-grey.jpg" alt="">
                 <p class="form__bike-price">
-                  33 999 грн.
+                  <span>33 999 грн.</span>
                 </p>
               </div>
               <div class="form__radio-style form__radio-style--grey"></div>
             </label>
             <label class="form__label">
-              <input type="radio" class="form__input-radio">
+              <input type="radio" class="form__input-radio" name="radio" checked>
               <div class="form__bike">
                 <img class="form__bike-img" src="images/form-bike/bike-white.jpg" alt="">
                 <p class="form__bike-price">
-                  32 999 грн.
+                  <span>32 999 грн.</span>
                 </p>
               </div>
               <div class="form__radio-style form__radio-style--white"></div>
             </label>
             <label class="form__label">
-              <input type="radio" class="form__input-radio">
+              <input type="radio" class="form__input-radio" name="radio">
               <div class="form__bike">
                 <img class="form__bike-img" src="images/form-bike/bike-red.jpg" alt="">
                 <p class="form__bike-price">
-                  35 999 грн.
+                  <span>35 999 грн.</span>
                 </p>
               </div>
               <div class="form__radio-style form__radio-style--red"></div>
             </label>
-          <a class="form__link">
-            ЗАКАЗАТЬ
-          </a>
           </div>
+          <button class="form__btn">
+            ЗАКАЗАТЬ
+          </button>
         </form>
       </div>
     </div>
