added markup and styles for footer

--- a/index.html
+++ b/index.html
@@ -448,6 +448,33 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <a class="footer__link" href="#">
+          Политика конфиденциальности
+        </a>
+        <div class="footer__social">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-img" src="images/footer/insta.svg" alt="инстаграм">
+          </a>
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-img" src="images/footer/fb.svg" alt="фейсбук">
+          </a>
+        </div>
+        <div class="footer__contacts">
+          <a class="footer__contacts-link" href="tel:+380506777777">
+            <img class="footer__contacts-img" src="images/footer/phone.svg" alt="иконка телефон">
+            <span>+38 050 677 77 77</span>
+          </a>
+          <a class="footer__contacts-link" href="mailto:elektrobikeukr@gmail.com">
+            <img class="footer__contacts-img" src="images/footer/email.svg" alt="иконка почты">
+            <span>elektrobikeukr@gmail.com</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
