Smooth scrolling after clicking on an anchor link

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="#">
-          <img class="logo__img" src="images/logo.jpg" alt="">
+          <img class="logo__img" src="images/logo.jpg" alt="логотип">
         </a>
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a class="menu__link" href="#">
+              <a class="menu__link" href="#info">
                 описание
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">
+              <a class="menu__link" href="#characteristic">
                 характеристики
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">
+              <a class="menu__link" href="#price">
                 стоимость
               </a>
             </li>
@@ -64,7 +64,7 @@
             7-скоростная
             трансмиссия и эргономичное сидение делают каждую поездку гораздо приятнее.
           </p>
-          <a class="bike__link">
+          <a class="bike__link" href="#price">
             ЗАКАЗАТЬ
           </a>
         </div>
@@ -113,7 +113,7 @@
       </div>
     </div>
   </section>
-  <section class="info">
+  <section class="info" id="info">
     <div class="container">
       <div class="info__inner">
         <img class="info__img" src="images/info-img.jpg" alt="">
@@ -193,7 +193,7 @@
       </div>
     </div>
   </section>
-  <section class="characteristic">
+  <section class="characteristic" id="characteristic">
     <div class="container">
       <h4 class="characteristic__head">
         Хaрактеристики
@@ -394,7 +394,7 @@
       </div>
     </div>
   </div>
-  <section class="price">
+  <section class="price" id="price">
     <div class="container">
       <div class="price__inner">
         <form class="form">
